--- a/tmux.conf
+++ b/tmux.conf
@@ -4,4 +4,15 @@ set -g default-terminal "tmux-256color"
 unbind C-b
 set -g prefix C-a
 bind C-a send prefix
+set -g mouse on
 
+#bind pane navigation key
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+#unbind"
+unbind Up
+unbind Down
+unbind Left
+unbind Right
