--- a/i3/config
+++ b/i3/config
@@ -50,14 +50,14 @@ workspace_layout default
 ##############################
 
 #border indicator on windows:
-new_window pixel 1
+#new_window pixel 1
 
 # thin borders
-# hide_edge_borders both
+hide_edge_borders both
 
 # Set inner/outer gaps
-gaps inner 0
-gaps outer 0
+#gaps inner 0
+#gaps outer 0
 
 
 
@@ -394,7 +394,9 @@ exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 #exec --no-startup-id sleep 2 && xfce4-terminal
 #exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
 #exec --no-startup-id sleep 3 && thunar
-exec --no-startup-id && ibus-daemon -drx
+exec --no-startup-id ibus-daemon -drx
+
+exec --no-startup-id /opt/ryzen-controller/ryzen-controller --no-sandbox
 
 # set floating (nontiling)for apps needing it
 for_window [class="Yad" instance="yad"] floating enable
