--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -92,7 +92,7 @@ interval=2
 [CPU-temperature]
 label=
 command=~/.config/i3/scripts/temperature
-interval=30
+interval=1
 #T_WARN=70
 #T_CRIT=90
 #SENSOR_CHIP=""
@@ -143,7 +143,8 @@ command=~/.config/i3/scripts/keyhint
 
 [time]
 #label=
-command=date '+%a %d %b %H:%M:%S'
+command=date '+%a %d %H:%M'
+#command=date '+%a %d %b %H:%M:%S'
 interval=1
 
 [shutdown_menu]
