--- a/i3/config
+++ b/i3/config
@@ -174,7 +174,7 @@ bindsym $mod+Return exec xfce4-terminal
 bindsym $mod+Shift+q kill
 
 # exit-menu
-bindsym $mod+Shift+e exec ~/.config/i3/scripts/powermenu
+bindsym $mod+Shift+e exec rofi -show power-menu -modi power-menu:~/.config/i3/scripts/rofi-power-menu 
 
 # Lock the system
 # lock with a picture:
@@ -195,8 +195,8 @@ bindsym F1 exec ~/.config/i3/scripts/keyhint-2
 # bindsym $mod+F1 exec xed ~/.config/i3/keybindings
 
 # Backlight control
-bindsym XF86MonBrightnessUp exec xbacklight +10
-bindsym XF86MonBrightnessDown exec xbacklight -10
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight +10
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -10
 
 # change focus
 bindsym $mod+j focus left
@@ -316,6 +316,7 @@ set $ws10 "10"
 assign [class="Xfce4-terminal"] $ws1
 assign [class="(?i)firefox"] $ws2
 assign [class="Google-chrome"] $ws2
+assign [class="chromium"] $ws2
 assign [class="jetbrains-idea"] $ws3
 assign [class="Thunar"] $ws3
 assign [class="Evolution"] $ws4
@@ -344,6 +345,7 @@ exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # if enabled you should comment welcome app.
 #exec --no-startup-id dex -a -s /etc/xdg/autostart/:~/.config/autostart/
 exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=secret
 
 # start welcome app
 #exec --no-startup-id sh /usr/share/endeavouros/scripts/welcome --startdelay=3 
@@ -396,7 +398,7 @@ exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 #exec --no-startup-id sleep 3 && thunar
 exec --no-startup-id ibus-daemon -drx
 
-exec --no-startup-id /opt/ryzen-controller/ryzen-controller --no-sandbox
+# exec --no-startup-id /opt/ryzen-controller/ryzen-controller --no-sandbox
 
 # set floating (nontiling)for apps needing it
 for_window [class="Yad" instance="yad"] floating enable
@@ -443,7 +445,7 @@ client.urgent		    $urgentred	$urgentred	$white		$purple		$yellowbrown
 # Start i3bar to display a workspace bar
 # (plus the system information i3status finds out, if available)
 bar {
-		font pango:Noto Sans Regular 10, FontAwesome 10
+		font pango:Noto Sans Regular 15, FontAwesome 15
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
 	    	position bottom
 #	    	i3bar_command i3bar --transparency
@@ -520,3 +522,6 @@ bindsym $mod+t exec rofi -show window \
 
 #bindsym F10 exec rofi -show window \
 #		-config ~/.config/rofi/rofidmenu.rasi
+
+# switch between different input methods ibus
+bindsym $mod+Control+space exec ~/.config/i3/scripts/ibus-switch
